--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
 asgiref==3.11.1
+brotli==1.2.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+cloudinary==1.44.1
+colorama==0.4.6
 dj-database-url==3.1.0
 Django==5.2.11
+django-cloudinary-storage==0.3.0
+dotenv==0.9.9
 gunicorn==25.0.3
+h11==0.16.0
+idna==3.11
 packaging==26.0
 pillow==12.1.0
 psycopg2-binary==2.9.11
+python-dotenv==1.2.1
+requests==2.32.5
+six==1.17.0
 sqlparse==0.5.5
 tzdata==2025.3
+urllib3==2.6.3
+uvicorn==0.40.0
 whitenoise==6.11.0
-                 
